--- a/e-commerce/src/App.css
+++ b/e-commerce/src/App.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+:root {
+  --primaryColor:#121926;
+  --secondaryColor:#FFD700;
+  --accentColor: #3b4149;  
+}
+
 body {
   font-family: 'Rubik', sans-serif;
 }
@@ -12,3 +18,34 @@ a {
   text-decoration: none;
   display: inline-block;
 }
+
+.form-control:focus {
+  box-shadow: none;
+  border-color: inherit;
+}
+
+/* Header Part */
+
+.header-top-strip  {
+  border-bottom: 1px solid var(--accentColor);
+  background-color: var(--primaryColor);
+}
+
+.header-upper {
+  background-color: var(--primaryColor);
+}
+
+.header-upper .input-group-text {
+  background-color: var(--secondaryColor);
+}
+
+.header-upper .header-upper-links img {
+  width: 35px;
+  height: 35px;
+}
+
+.header-bottom  {
+  border-top: 1px solid var(--accentColor);
+  background-color: var(--primaryColor);
+}
+
